# routecodex

./: .dockerignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .npmignore  .prettierignore  .secrets.baseline  AGENTS.md  ANTHROPIC_OPENAI_TEST_PLAN.md  ANTIGRAVITY_429_DEBUG_GUIDE.md  ANTIGRAVITY_429_SUMMARY.md  ARCHITECTURE_PRINCIPLES_UPDATE_REPORT.md  CACHE.md  CCR_ALIGNMENT_PLAN.md  CHANGELOG.md  CI_CD_SUMMARY.md  CLAUDE.md  CLI_OFFLINE_LOG_GUIDE.md  COMMIT_MESSAGE.md  COMPLETE_FIX_SUMMARY.md  CONFIGURATION_GUIDE.md  CONFIG_COMPATIBILITY_GUIDE.md  CONFIG_OPTIMIZATION_SUMMARY.md  CONFIG_STARTUP_GUIDE.md  DEAD_CODE_ANALYSIS_SUMMARY.md  DEAD_CODE_CLEANUP_PLAN.md  DEBUG_BUILD_SUMMARY.md  DELIVERY.md  DEPRECATED_CODE_ANALYSIS_REPORT.md  Dockerfile  END_TO_END_TEST_REPORT.md  FINAL_STATUS_REPORT.md  GIT_OPERATIONS_GUIDE.md  GLM_FIELD_MAPPING_VERIFICATION.md  GLM_MIGRATION_COMPLETE.md  HEARTBEAT.md  IFLOW.md  IMPLEMENTATION_PLAN.md  INSTALL.md  (+205 more)
sharedmodule/llmswitch-core/rust-core/crates/router-hotpath-napi/: Cargo.toml
sharedmodule/llmswitch-core/rust-core/crates/router-hotpath-napi/src/: anthropic_openai_codec.rs  anthropic_response_helper.rs  anthropic_sse_event_payload.rs  chat_anthropic_tool_alias.rs  chat_clock_clear_directive.rs  chat_clock_reminder_directives.rs  chat_clock_reminder_orchestration_semantics.rs  chat_clock_reminder_semantics.rs  chat_clock_reminder_time_tag_semantics.rs  chat_clock_reminders_semantics.rs  chat_clock_schedule_directive_candidate.rs  chat_clock_schedule_directive_text_parts.rs  chat_clock_tool_schema_ops.rs  chat_continue_execution_directive_injection.rs  chat_governance_context.rs  (+133 more)
sharedmodule/llmswitch-core/rust-core/crates/servertool-cli/: Cargo.toml
v3/: Cargo.toml
v3/crates/routecodex-v3-cli/: Cargo.toml
v3/crates/routecodex-v3-cli/src/: main.rs
v3/crates/routecodex-v3-cli/tests/: foundation_cli.rs  h2_p6_controlled_replay.rs  managed_lifecycle.rs  vr_full_function_controlled_replay.rs
v3/crates/routecodex-v3-cli/tests/support/: mod.rs
v3/crates/routecodex-v3-config/: Cargo.toml
v3/crates/routecodex-v3-config/src/: defaults.rs  lib.rs  store.rs  types.rs  v2_compat.rs  validate.rs
v3/crates/routecodex-v3-config/tests/: config_v3_contract.rs
v3/crates/routecodex-v3-debug/: Cargo.toml
v3/crates/routecodex-v3-debug/src/: lib.rs
v3/crates/routecodex-v3-debug/tests/: debug_runtime_contract.rs
v3/crates/routecodex-v3-error/: Cargo.toml
v3/crates/routecodex-v3-error/src/: lib.rs
v3/crates/routecodex-v3-error/tests/: error_chain_contract.rs
v3/crates/routecodex-v3-lifecycle/: Cargo.toml
v3/crates/routecodex-v3-lifecycle/src/: lib.rs
v3/crates/routecodex-v3-provider-responses/: Cargo.toml
v3/crates/routecodex-v3-provider-responses/src/: error.rs  health.rs  lib.rs  raw_response.rs  shared.rs  transport.rs  wire.rs
v3/crates/routecodex-v3-provider-responses/tests/: general_provider.rs  responses_websocket_v2.rs
v3/crates/routecodex-v3-runtime/: Cargo.toml
v3/crates/routecodex-v3-runtime/src/: diagnostics.rs  foundation.rs  hooks.rs  hub_v1.rs  kernel.rs  lib.rs  local_continuation.rs  nodes.rs  provider_failure_runtime_policy.rs  remote_continuation.rs  shared.rs
v3/crates/routecodex-v3-runtime/src/hub_v1/: anthropic_codec.rs  anthropic_relay_hooks.rs  anthropic_relay_runtime.rs  anthropic_relay_runtime_codec.rs  common.rs  gemini_codec.rs  gemini_relay_runtime.rs  openai_chat_codec.rs  openai_chat_relay_runtime.rs  provider_compat_shared.rs  provider_req_compat_06_provider_compat.rs  provider_req_outbound_08_wire_payload.rs  provider_req_outbound_09_transport_request.rs  provider_request_dry_run.rs  provider_resp_compat_02_provider_compat.rs  provider_resp_inbound_01_raw.rs  relay_request.rs  req_chat_process_04_governed.rs  req_continuation_03_classified.rs  req_execution_05_planned.rs  req_inbound_01_client_raw.rs  req_inbound_02_normalized.rs  req_outbound_07_provider_semantic.rs  req_target_06_resolved.rs  request_outbound_format.rs  resource_hooks.rs  resp_chat_process_03_governed.rs  resp_continuation_04_committed.rs  resp_inbound_02_normalized.rs  resp_outbound_05_client_semantic.rs  responses_openai_codec.rs  responses_relay_runtime.rs  server_resp_outbound_06_client_frame.rs  servertool_hooks.rs  side_channel.rs  tests.rs  tool_error_governance.rs
v3/crates/routecodex-v3-runtime/tests/: anthropic_relay_anthropic_provider_wire_integration.rs  anthropic_relay_local_continuation_integration.rs  anthropic_relay_runtime_integration.rs  gemini_relay_runtime_integration.rs  h4_remote_continuation_contract.rs  hub_anthropic_codec_characterization.rs  hub_anthropic_relay_protocol_hooks.rs  hub_gemini_codec_characterization.rs  hub_openai_chat_codec_characterization.rs  hub_relay_payload_copy_runtime_probes.rs  hub_relay_request_semantics.rs  hub_relay_response_semantics.rs  hub_relay_response_stopless_live_shapes.rs  hub_relay_runtime_closeout.rs  hub_relay_stopless_center_semantics.rs  hub_relay_tool_servertool_multiturn_parity.rs  hub_v1_h1_contract.rs  local_continuation_contract_store.rs  openai_chat_relay_runtime_integration.rs  responses_direct_remote_continuation_integration.rs  responses_direct_tool_passthrough.rs  responses_relay_anthropic_provider_wire_integration.rs  responses_relay_local_continuation_integration.rs
v3/crates/routecodex-v3-server/: Cargo.toml
v3/crates/routecodex-v3-server/src/: lib.rs
v3/crates/routecodex-v3-server/tests/: gemini_relay_controlled.rs  multi_listener_server.rs  openai_chat_relay_controlled.rs
v3/crates/routecodex-v3-sse/: Cargo.toml
v3/crates/routecodex-v3-sse/src/: lib.rs
v3/crates/routecodex-v3-target/: Cargo.toml
v3/crates/routecodex-v3-target/src/: lib.rs
v3/crates/routecodex-v3-virtual-router/: Cargo.toml
v3/crates/routecodex-v3-virtual-router/src/: lib.rs
v3/fixtures/: config.p5.toml  config.p6.toml
v3/fixtures/anthropic-relay-controlled-upstream/: json_thinking_tool_use.json  manifest.json  provider_error.json  side_channel_isolation.json  sse_thinking_tool_use.json
v3/tests/support/: hub_v1_fixture.rs
(+12640 files in other folders)
