[workspace]
members = [
  "crates/routecodex-v3-config",
  "crates/routecodex-v3-debug",
  "crates/routecodex-v3-error",
  "crates/routecodex-v3-virtual-router",
  "crates/routecodex-v3-target",
  "crates/routecodex-v3-provider-responses",
  "crates/routecodex-v3-runtime",
  "crates/routecodex-v3-server",
  "crates/routecodex-v3-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
async-trait = "0.1"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
toml = "0.8"
