[workspace]
members = [
  "crates/routecodex-v3-config",
  "crates/routecodex-v3-debug",
  "crates/routecodex-v3-error",
  "crates/routecodex-v3-virtual-router",
  "crates/routecodex-v3-target",
  "crates/routecodex-v3-provider-responses",
  "crates/routecodex-v3-runtime",
  "crates/routecodex-v3-server",
  "crates/routecodex-v3-lifecycle",
  "crates/routecodex-v3-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
async-trait = "0.1"
axum = "0.7"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync"] }
toml = "0.8"
