[package]
name = "routecodex-v3-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "routecodex-v3"
path = "src/main.rs"

[dependencies]
clap.workspace = true
routecodex-v3-config = { path = "../routecodex-v3-config" }
routecodex-v3-server = { path = "../routecodex-v3-server" }
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
