[package]
name = "routecodex-v3-lifecycle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
routecodex-v3-config = { path = "../routecodex-v3-config" }
routecodex-v3-server = { path = "../routecodex-v3-server" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
