[package]
name = "routecodex-v3-provider-responses"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
reqwest.workspace = true
routecodex-v3-config = { path = "../routecodex-v3-config" }
routecodex-v3-error = { path = "../routecodex-v3-error" }
serde.workspace = true
serde_json.workspace = true
sse-transport-core = { path = "../../../sharedmodule/llmswitch-core/rust-core/crates/sse-transport-core" }
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
axum.workspace = true
