[package]
name = "routecodex-v3-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
routecodex-v3-config = { path = "../routecodex-v3-config" }
routecodex-v3-debug = { path = "../routecodex-v3-debug" }
routecodex-v3-error = { path = "../routecodex-v3-error" }
routecodex-v3-provider-responses = { path = "../routecodex-v3-provider-responses" }
routecodex-v3-target = { path = "../routecodex-v3-target" }
routecodex-v3-virtual-router = { path = "../routecodex-v3-virtual-router" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sse-transport-core = { path = "../../../sharedmodule/llmswitch-core/rust-core/crates/sse-transport-core" }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
