[package]
name = "routecodex-v3-target"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
routecodex-v3-config = { path = "../routecodex-v3-config" }
routecodex-v3-provider-responses = { path = "../routecodex-v3-provider-responses" }
routecodex-v3-virtual-router = { path = "../routecodex-v3-virtual-router" }
thiserror.workspace = true
