[package]
name = "router-hotpath-napi"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[build-dependencies]
napi-build = "2"
