[package]
name = "servertool-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
servertool-core = { path = "../servertool-core" }

[[bin]]
name = "routecodex-servertool"
path = "src/main.rs"
